turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:13: error: type mismatch;
 found   : java.awt.Color
 required: Int
    setCouleurBrosse(colors(rule(state)(colors(couleurSol))(0)))
                                              ^Turmite:14: error: type mismatch;
 found   : java.awt.Color
 required: Int
    if (rule(state)(colors(couleurSol))(1) == 1) {
                          ^Turmite:17: error: type mismatch;
 found   : java.awt.Color
 required: Int
    if (rule(state)(colors(couleurSol))(1) == 2) {
                          ^Turmite:21: error: type mismatch;
 found   : java.awt.Color
 required: Int
    if (rule(state)(colors(couleurSol))(1) == 4) {
                          ^Turmite:26: error: type mismatch;
 found   : java.awt.Color
 required: Int
    if (rule(state)(colors(couleurSol))(1) == 8) {
                          ^Turmite:30: error: type mismatch;
 found   : java.awt.Color
 required: Int
    state = rule(state)(colors(couleurSol))(2)
                              ^